--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -1,4 +1,4 @@
-{% if site.posts.size > 0 %}
+<!-- {% if site.posts.size > 0 %}
   <ul>
     {% for post in site.posts %}
       <li class="post-list-item">
@@ -10,3 +10,4 @@
     {% endfor %}
   </ul>
 {% endif %}
+ -->
