--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -157,6 +157,10 @@ html.transition *:after {
   border-top: 1px var(--text) dashed;
   margin: 0.5em 0;
 }
+.solid {
+  border-top: 1px var(--text);
+  margin: 0.5em 0;
+}
 mark {
   padding: 0.4em;
   background-color: var(--highlight);
