--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 <header>
 {% if site.theme_config.show_navbar == true %}
   {% include horizontal_list.html collection=site.data.home.navbar_entries %}
-  <div class="dashed"></div>
+  <div class="solid"></div>
 {% endif %}
 
   <h1>{{ site.title }}</h1>
