--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -158,7 +158,7 @@ html.transition *:after {
   margin: 0.5em 0;
 }
 .solid {
-  border-top: 1px var(--text);
+  border-top: 1px var(--text) solid;
   margin: 0.5em 0;
 }
 mark {
