--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,13 @@ layout: default
 </header>
 
 <h1 class="post-title">{{ page.title }}</h1>
+
 {{ content }}
+
+{% if site.theme_config.show_projects == true %}
+  <h2>{{ site.theme_config.home.title_projects }}</h2>
+  {% include card_list.html collection=site.data.home.project_entries %}
+{% endif %}
 
 {% if site.theme_config.show_footer == true %}
   <footer>
