--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 html { height: 100%; }
 
 body {
-  font-family:  "Gilroy", "Inter", -apple-system, "avenir next", avenir, roboto, noto, ubuntu, "helvetica neue", helvetica, sans-serif;
+  font-family:  "Inter", -apple-system, "avenir next", avenir, roboto, noto, ubuntu, "helvetica neue", helvetica, sans-serif;
   font-size: 1.0rem;
   line-height: 2;
   margin: 0;
