--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -82,7 +82,8 @@ img {
       --headings: #74c0fc;
       --links: #91A7FF;
       --highlight: #41C7C7;
-      --bg: #1f242A;
+      --bg: #1748cf;
+      // --bg: #1f242A;
       --bg-secondary: #323945;
       --text: #adb5bd;
       --text-secondary: #9CA3AF;
