--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -85,8 +85,9 @@ img {
       --links: #91A7FF;
       --highlight: #41C7C7;
       --bg: #1748cf;
+      --bg-secondary: #3c6cf0;
       // --bg: #1f242A;
-      --bg-secondary: #323945;
+      // --bg-secondary: #323945;
       --text: #adb5bd;
       --text-secondary: #9CA3AF;
       --code-text: #91A7FF;
