--- a/_sass/list.scss
+++ b/_sass/list.scss
@@ -22,7 +22,7 @@ ul.horizontal-list {
   border: 1px var(--text) solid;
   width: 11em;
   height: auto;
-  text-align: center;
+  text-align: left;
   font-size: 1em;
   align-items: center;
   background-color: var(--bg-secondary);
