--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -85,7 +85,7 @@ img {
       --links: #91A7FF;
       --highlight: #41C7C7;
       --bg: #1748cf;
-      --bg-secondary: #3c6cf0;
+      --bg-secondary: #1748cf;
       // --bg: #1f242A;
       // --bg-secondary: #323945;
       --text: #adb5bd;
