--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -66,7 +66,7 @@ img {
 @mixin light-appearance {
   html, body {
       --bg: #6B9CED;
-      --bg-secondary: #90B2EA;
+      --bg-secondary: #3e77d6;
       // --bg: #FFF;
       // --bg-secondary: #f3f4f6;
       --headings: #1e293b;
@@ -85,7 +85,7 @@ img {
       --links: #91A7FF;
       --highlight: #41C7C7;
       --bg: #1748cf;
-      --bg-secondary: #1748cf;
+      --bg-secondary: #0043fc;
       // --bg: #1f242A;
       // --bg-secondary: #323945;
       --text: #adb5bd;
