--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -66,7 +66,7 @@ img {
 @mixin light-appearance {
   html, body {
       --bg: #6B9CED;
-      --bg-secondary: #3e77d6;
+      --bg-secondary: #8cb3f5;
       // --bg: #FFF;
       // --bg-secondary: #f3f4f6;
       --headings: #1e293b;
