--- a/_sass/list.scss
+++ b/_sass/list.scss
@@ -25,7 +25,7 @@ ul.horizontal-list {
   text-align: left;
   font-size: 1em;
   align-items: center;
-  background-color: var(--bg-secondary);
+  background-color: var(--bg);
   margin-bottom: 0.8em;
   border-radius: 0.5em;
 
