--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -88,7 +88,8 @@ img {
       --bg-secondary: #0043fc;
       // --bg: #1f242A;
       // --bg-secondary: #323945;
-      --text: #adb5bd;
+      --text: #ffffff;
+      // --text: #adb5bd;
       --text-secondary: #9CA3AF;
       --code-text: #91A7FF;
       --share-text: #C4C4C4;
