--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -88,7 +88,7 @@ img {
       --bg-secondary: #0043fc;
       // --bg: #1f242A;
       // --bg-secondary: #323945;
-      --text: #d3dae0;
+      --text: #c9ced4;
       // --text: #adb5bd;
       --text-secondary: #9CA3AF;
       --code-text: #91A7FF;
