--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -72,7 +72,8 @@ img {
       --headings: #1e293b;
       --text: #374151;
       --text-secondary: #6b7280;
-      --links: #6366f1;
+      --links: #5356db;
+      // --links: #6366f1;
       --highlight: #FFECB2; // light yellow
       --code-text: #9D174D;
       --share-text: #999;
