--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -77,6 +77,7 @@ img {
       --highlight: #FFECB2; // light yellow
       --code-text: #9D174D;
       --share-text: #999;
+      --primes-24-1: primes-24-1-lblue.png;
   }
 }
 // -------------- THEME SWITCHER -------------- //
@@ -94,6 +95,7 @@ img {
       --text-secondary: #9CA3AF;
       --code-text: #91A7FF;
       --share-text: #C4C4C4;
+      --primes-24-1: primes-24-1-dblue.png;
   };
 }
 
