--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -85,7 +85,7 @@ img {
       --headings: #74c0fc;
       --links: #91A7FF;
       --highlight: #41C7C7;
-      --bg: #1748cf;
+      --bg: #0066ff;
       --bg-secondary: #0043fc;
       // --bg: #1f242A;
       // --bg-secondary: #323945;
