--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -83,7 +83,8 @@ img {
       --headings: #74c0fc;
       --links: #91A7FF;
       --highlight: #41C7C7;
-      --bg: #1748cf;
+      --bg: #7f17cf;
+      // --bg: #1748cf;
       --bg-secondary: #0043fc;
       --text: #c9ced4;
       // --text: #adb5bd;
