--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -83,15 +83,14 @@ img {
       --headings: #74c0fc;
       --links: #91A7FF;
       --highlight: #41C7C7;
-      --bg: #7f17cf;
-      // --bg: #1748cf;
+      --bg: #1748cf;
       --bg-secondary: #0043fc;
       --text: #c9ced4;
       // --text: #adb5bd;
       --text-secondary: #9CA3AF;
       --code-text: #91A7FF;
       --share-text: #C4C4C4;
-  }
+  };
 }
 
 html[data-theme="dark"] { @include dark-appearance; }
