--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -38,8 +38,8 @@ hr.page-break {
 
 .heading-block .subline {
   margin-top: 0.1rem; /* Adjust this for vertical spacing */
-  font-size: 0.5rem;
-  font-style: bold;
+  font-size: 1.0rem;
+  font-weight: bold;
   color: var(--headings);
 }
 
