--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -39,8 +39,7 @@ hr.page-break {
 .heading-block .subline {
   margin-top: 0.1rem; /* Adjust this for vertical spacing */
   font-size: 1.0rem;
-  font-weight: bold;
-  color: var(--headings);
+  // color: var(--headings);
 }
 
 p { margin: 1em 0; }
