--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -39,7 +39,7 @@ hr.page-break {
 .heading-block .subline {
   margin-top: 0.1rem; /* Adjust this for vertical spacing */
   font-size: 1.0rem;
-  // color: var(--headings);
+  cursor: pointer;
 }
 
 p { margin: 1em 0; }
