--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -80,7 +80,7 @@ img {
 }
 @mixin light-appearance {
   html, body {
-      --bg: #6B9CED;
+      --bg: #ffe0ba; // #6B9CED;
       --bg-secondary: #8cb3f5;
       --headings: #1e293b;
       --text: #374151;
@@ -98,7 +98,7 @@ img {
       --headings: #74c0fc;
       --links: #91A7FF;
       --highlight: #41C7C7;
-      --bg: #0737ba; // #032582; #1748cf;
+      --bg: #fa931e; // #0737ba; // #032582; #1748cf;
       --bg-secondary: #0043fc;
       --text: #c9ced4;
       // --text: #adb5bd;
