--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -97,9 +97,9 @@ img {
   html, body  {
       --links: #91A7FF;
       --highlight: #41C7C7;
-      --bg: #fa931e; 
+      --bg: #ED7014; // #fa931e; 
       --bg-secondary: #8cb3f5;
-      --headings: #1e293b;
+      --headings: #8D4004; // #1e293b;
       --text: #374151;
       --text-secondary: #6b7280;
       //--bg: #0737ba; // #032582; #1748cf;
