--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -85,7 +85,7 @@ img {
       --headings: #1e293b;
       --text: #374151;
       --text-secondary: #6b7280;
-      --links: #5356db;
+      --links: #BE5504; // #5356db;
       // --links: #6366f1;
       --highlight: #FFECB2; // light yellow
       --code-text: #9D174D;
@@ -95,11 +95,11 @@ img {
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   html, body  {
-      --links: #91A7FF;
+      --links: #BE5504; // #91A7FF;
       --highlight: #41C7C7;
       --bg: #ED7014; // #fa931e; 
       --bg-secondary: #8cb3f5;
-      --headings: #8D4004; // #1e293b;
+      --headings: #1e293b;
       --text: #374151;
       --text-secondary: #6b7280;
       //--bg: #0737ba; // #032582; #1748cf;
