--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -95,7 +95,7 @@ img {
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   html, body  {
-      --links: #BE5504; // #91A7FF;
+      --links: #FCAE1E; // #91A7FF;
       --highlight: #41C7C7;
       --bg: #ED7014; // #fa931e; 
       --bg-secondary: #8cb3f5;
