--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -97,7 +97,7 @@ img {
   html, body  {
       --links: #FCAE1E; // #91A7FF;
       --highlight: #41C7C7;
-      --bg: #ED7014; // #fa931e; 
+      --bg: #FC6A03; // #ED7014; // #fa931e; 
       --bg-secondary: #8cb3f5;
       --headings: #1e293b;
       --text: #374151;
