--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -80,12 +80,12 @@ img {
 }
 @mixin light-appearance {
   html, body {
-      --bg: #ffe0ba; // #6B9CED;
+      --bg: #6B9CED;
       --bg-secondary: #8cb3f5;
       --headings: #1e293b;
       --text: #374151;
       --text-secondary: #6b7280;
-      --links: #BE5504; // #5356db;
+      --links: #5356db;
       // --links: #6366f1;
       --highlight: #FFECB2; // light yellow
       --code-text: #9D174D;
@@ -95,18 +95,13 @@ img {
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   html, body  {
-      --links: #FCAE1E; // #91A7FF;
+      --links: #91A7FF;
       --highlight: #41C7C7;
-      --bg: #FC6A03; // #ED7014; // #fa931e; 
-      --bg-secondary: #8cb3f5;
-      --headings: #1e293b;
-      --text: #374151;
-      --text-secondary: #6b7280;
-      //--bg: #0737ba; // #032582; #1748cf;
-      //--bg-secondary: #0043fc;
-      //--headings: #74c0fc;
-      //--text: #c9ced4;
-      //--text-secondary: #9CA3AF;
+      --bg: #0737ba; // #032582; #1748cf;
+      --bg-secondary: #0043fc;
+      --headings: #74c0fc;
+      --text: #c9ced4;
+      --text-secondary: #9CA3AF;
       --code-text: #91A7FF;
       --share-text: #C4C4C4;
   };
